# syc

./: .gitignore  Cargo.toml  NOTES.md  README.md  bench.sh  bench_arc.sh  bench_sweep.sh  build.rs
src/: archive.rs  cli.rs  color.rs  delta.rs  detect.rs  dict_fa.rs  fastcdc.rs  lzp.rs  main.rs  pipeline.rs  pjg.rs  ppg.rs  progress.rs  rep.rs  snapshot.rs  srep.rs
tests/: roundtrip.rs
