[package]
name = "syc"
version = "0.1.25"
edition = "2021"
description = "Streaming archiver + compressor in pure-ish Rust, tuned for modest hardware"
license = "MIT OR Apache-2.0"

[dependencies]
zstd = { version = "0.13", default-features = false, features = ["zstdmt", "zdict_builder"] }
xz2 = "0.1"
walkdir = "2.5"
anyhow = "1.0"
byteorder = "1.5"
crc32fast = "1.4"
ppmd-rust = "1.4"
blake3 = "1.5"
twox-hash = { version = "2.1", default-features = false, features = ["xxhash3_64", "std"] }

[target.'cfg(unix)'.dependencies]
xattr = "1.3"
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
xattr = "1.3"

[build-dependencies]
cc = "1.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
